fixed the spacing for Making Things Equal cards, updated the sidebar and navbar on report-builder page

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -24,7 +24,7 @@
 
     .prstnBtnResponsive {
         margin: 0 !important;
-        width: 100% !important;
+/*        width: 100% !important;*/
         margin: 0.5rem 0 !important;
     }
 
